# tppocr3

./: .gitignore  Cargo.toml  README.md  build.rs
config/: tpp_aniversary_crystal.toml  tppocr_config.example.toml
src/: bindings.rs  canvas.rs  config.rs  frame.rs  lib.rs  logging.rs  main.rs  message_socket.rs  processor.rs  shared_memory.rs  stream_url.rs  text_processor.rs  text_recognizer.rs  vnc.rs
src/c/: libvnc_wrapper.hpp
